<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VK Messenger</string>
    <string name="online_friends">Online</string>
    <string name="all_friends">All</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="signup_descr">For fast, free and convenient messaging with friends and contacts</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="password">Password</string>
    <string name="requests">Requests</string>
    <string name="suggestions">Suggestions</string>
    <string name="messages">Messages</string>
    <string name="friends">Friends</string>
    <string name="search">Search</string>
    <string name="prefs">Preferences</string>
    <string name="yesterday">yesterday</string>
    <string name="search_top_text">Friends search</string>
    <string name="messages_top_text">Messages</string>
    <string name="prefs_top_text">Preferences</string>
    <string name="send">Send</string>
    <string name="write_msg">Write message</string>
    <string name="cancel">Cancel</string>
    <string name="delete_n">Delete (%1$d)</string>
    <string name="forward_n">Forward (%1$d)</string>
    <string name="make_photo">Make photo</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="attach_location">Attach Location</string>
    <string name="gallery_choice">Gallery choice</string>
    <string name="camera_choice">Camera choice</string>
    <string name="error_in_adding_attach">Error occurred while adding attach. Please, try again</string>
    <string name="login_auth_error">Incorrect login or password</string>
    <string name="login_fatal_error">Error occurred while login. Please, try again</string>
    <string name="search_hint">Search</string>
    <string name="typing_message">Typing message...</string>
    <string name="cant_delete_sending_msg">It is impossible to delete sending message!</string>
    <string name="cant_forward_sending_msg">It is impossible to forward sending message!</string>
    <string name="cant_send_empty_message">Message is empty!</string>
    <string name="select_location">Select location</string>
    <string name="not_dowanloaded_name">...</string>
    <string name="send_message">Send message</string>
    <string name="add_to_friends">Add to friends</string>
    <string name="refuse_request">Refuse request</string>
    <string name="remove_from_friends">Remove friend</string>
    <string name="error_in_playing_video">Error occurred while playing video. Please, try again</string>
    <string name="error_in_playing_audio">Error occurred while playing auido. Please, try again</string>
    <string name="chat_name">Chat name</string>
    <string name="error_in_chat_edit">Error occurred in chat edit. Please, try again</string>
    <string name="add_chat_user">Add chat user</string>
    <string name="save_chat_name">Save chat name</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
    <string name="switch_on_sound">Switch sound on</string>
    <string name="switch_on_push">Switch push on</string>
    <string name="switch_off_sound">Switch sound off</string>
    <string name="switch_off_push">Switch push off</string>
    <string name="change_photo">Change photo</string>
    <string name="search_empty">There is no users with such name</string>
    <string name="registration">Registration</string>
    <string name="phone_number">Phone number</string>
    <string name="name">Name</string>
    <string name="surname">Family name</string>
    <string name="register">Register</string>
    <string name="confirm_code">Confirm code</string>
    <string name="error_in_registration">Error occurred while registration. Please, try again</string>
    <string name="auth_error">Authorization error occurred! Please, restart application</string>
    <string name="action_denied">Permission to perform this action is denied. Please, check permissions on http://vk.com</string>
    <string name="captcha">Captcha</string>
    <string name="new_message">New message</string>
    <string name="new_friend_request">New friend request</string>
    <string name="error_in_uploading_photo">Error occurred while uploading photo. Please, try again</string>

</resources>