<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/name_tv"
            style="@style/MainScreenTopBarText"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/top_bar_bckg"
            android:gravity="center"
            android:text="@string/registration" />

        <EditText
            android:id="@+id/code_et"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/singup_text_bckg"
            android:hint="@string/confirm_code"
            android:paddingLeft="15dp"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <View
                android:layout_width="30dp"
                android:layout_height="fill_parent" />

            <EditText
                android:id="@+id/pass_et"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/singup_text_bckg"
                android:hint="@string/password"
                android:paddingLeft="15dp"
                android:textSize="18dp" >
            </EditText>

            <ImageView
                android:id="@+id/pass_status_iv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:padding="5dp"
                android:scaleType="fitCenter" />
        </LinearLayout>

        <Button
            android:id="@+id/register_btn"
            style="@style/BlueButton"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:text="@string/register" />
    </LinearLayout>

    <ImageView
        android:id="@+id/loader_iv"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#77000000"
        android:clickable="true"
        android:scaleType="center"
        android:src="@drawable/loader_white"
        android:visibility="gone" />

</RelativeLayout>