<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/top_bar_ll"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/top_bar_bckg"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/back_iv"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:clickable="true"
                android:contentDescription="@string/desc_back"
                android:scaleType="center"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/name_tv"
                style="@style/MainScreenTopBarText"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/registration" />

            <View
                android:layout_width="50dp"
                android:layout_height="fill_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <View
                android:layout_width="30dp"
                android:layout_height="fill_parent" />

            <EditText
                android:id="@+id/phone_et"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/singup_text_bckg"
                android:hint="@string/phone_number"
                android:paddingLeft="15dp"
                android:textSize="18dp" >
            </EditText>

            <ImageView
                android:id="@+id/phone_status_iv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:padding="5dp"
                android:scaleType="fitCenter" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <View
                android:layout_width="30dp"
                android:layout_height="fill_parent" />

            <EditText
                android:id="@+id/name_et"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/singup_text_bckg"
                android:hint="@string/name"
                android:paddingLeft="15dp"
                android:textSize="18dp" >
            </EditText>

            <ImageView
                android:id="@+id/name_status_iv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:padding="5dp"
                android:scaleType="fitCenter" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <View
                android:layout_width="30dp"
                android:layout_height="fill_parent" />

            <EditText
                android:id="@+id/surname_et"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/singup_text_bckg"
                android:hint="@string/surname"
                android:paddingLeft="15dp"
                android:textSize="18dp" >
            </EditText>

            <ImageView
                android:id="@+id/surname_status_iv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:padding="5dp"
                android:scaleType="fitCenter" />
        </LinearLayout>

        <Button
            android:id="@+id/register_btn"
            style="@style/BlueButton"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:text="@string/register" />
    </LinearLayout>

    <ImageView
        android:id="@+id/loader_iv"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#77000000"
        android:clickable="true"
        android:scaleType="center"
        android:src="@drawable/loader_white"
        android:visibility="gone" />

</RelativeLayout>